# swagger-3.0.0.json
@@ -126,6 +126,15 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -162,6 +171,17 @@
         "responses": {
           "200": {
             "description": "The detail of a single booking",
+            "headers": {
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
+              }
+            },
             "content": {
               "application/json": {
                 "schema": {
@@ -212,6 +232,15 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -248,6 +277,17 @@
         "responses": {
           "200": {
             "description": "The detail of a single Contact",
+            "headers": {
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
+              }
+            },
             "content": {
               "application/json": {
                 "schema": {
@@ -307,6 +347,15 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -385,6 +434,15 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -440,6 +498,15 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -512,6 +579,15 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -594,6 +670,60 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/InvoicedBooking"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v3/client/invoices/{id}": {
+      "get": {
+        "tags": [
+          "Invoices"
+        ],
+        "summary": "Get detail for a single Invoice",
+        "operationId": "getInvoice",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The detail of a single Invoice",
+            "headers": {
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -673,6 +803,15 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -756,6 +895,15 @@
               },
               "x-total-count": {
                 "$ref": "#/components/headers/xTotalCount"
+              },
+              "x-rate-limit-limit": {
+                "$ref": "#/components/headers/xRateLimitLimit"
+              },
+              "x-rate-limit-remaining": {
+                "$ref": "#/components/headers/xRateLimitRemaining"
+              },
+              "x-rate-limit-reset": {
+                "$ref": "#/components/headers/xRateLimitReset"
               }
             },
             "content": {
@@ -1453,6 +1601,24 @@
       },
       "xTotalCount": {
         "description": "The total number of items for this query, taking into account any filters that may be applied.",
+        "schema": {
+          "type": "integer"
+        }
+      },
+      "xRateLimitLimit": {
+        "description": "The rate limit applicable to the current request.",
+        "schema": {
+          "type": "integer"
+        }
+      },
+      "xRateLimitRemaining": {
+        "description": "The number of requests left for the current rate-limit time window.",
+        "schema": {
+          "type": "integer"
+        }
+      },
+      "xRateLimitReset": {
+        "description": "The time (UTC epoch time in seconds) at which the rate limit resets.",
         "schema": {
           "type": "integer"
         }
